--- a/code/package.json
+++ b/code/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "spam-bot",
+  "name": "helpful-risk-emulator",
   "version": "1.0.0",
-  "description": "My First SpamBot",
+  "description": "Name says all.",
   "main": "bot.js",
-  "author": "canada",
+  "author": "canada&jupiter",
   "dependencies": {
-    "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
     "discord.js": "^11.4.2",
-    "winston": "^3.1.0"
   }
 }
