--- a/code/package.json
+++ b/code/package.json
@@ -9,6 +9,7 @@
     "discord.js": "^11.4.2",
     "erlpack": "^0.1.2",
     "libsodium-wrappers": "^0.7.4",
+    "node-ipc": "^9.1.1",
     "node-opus": "^0.3.1",
     "uws": "^100.0.1"
   }
